admin-service-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: admin-service
  template:
    metadata:
      labels:
        bb: admin-service
    spec:
      containers:
      - name: admin-service
        image: {image-value}
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service-entrypoint
  namespace: default
spec:
  selector:
    bb: admin-service
  ports:
  - port: 80
    targetPort: 8080
