s3-service-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: s3-service
  template:
    metadata:
      labels:
        bb: s3-service
    spec:
      containers:
      - name: s3-service
        image: {image-value}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 100m        
---
apiVersion: v1
kind: Service
metadata:
  name: s3-service-entrypoint
  namespace: default
spec:
  selector:
    bb: s3-service
  ports:
  - port: 80
    targetPort: 8080
