s3-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: s3-service
  template:
    metadata:
      labels:
        bb: s3-service
    spec:
      containers:
      - name: s3-service
        image: ahmad2sabateen/s3-service:latest
        imagePullPolicy: Always
        
---
apiVersion: v1
kind: Service
metadata:
  name: s3-service-entrypoint
  namespace: default
spec:
  selector:
    bb: s3-service
  ports:
  - port: 80
    targetPort: 8080
