user-service-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: user-service
  template:
    metadata:
      labels:
        bb: user-service
    spec:
      containers:
      - name: user-service
        image: {image-value}
        imagePullPolicy: Always        
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-entrypoint
  namespace: default
spec:
  selector:
    bb: user-service
  ports:
  - port: 80
    targetPort: 8080
