ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /Auth/*
            backend:
              serviceName: login-service-entrypoint
              servicePort: 80
          - path: /Admin/*
            backend:
              serviceName: admin-service-entrypoint
              servicePort: 80
          - path: /User/*
            backend:
              serviceName: user-service-entrypoint
              servicePort: 80
          - path: /S3Management/*
            backend:
              serviceName: s3-service-entrypoint
              servicePort: 80
